--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <img src="images/work.png" alt=" " />
+    <img src="work.png" alt=" " />
 
     <div id="header">
       <h1>Hello, Medlyn Jacob here</h1>
