--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <h3>About Me</h3>
 
       <p>
-        I am a first year Engineering Student at Mar Baselios College of
-        Engineering and Technology, Trivandrum. I am currently exploring the
-        field of web development and its related areas.
+        I am a first year  Engineering Student at Mar Baselios College of
+        Engineering and Technology, Trivandrum, India. My field of interest is web development and I am currently exploring the
+        field of front-end web development and its related areas.
       </p>
     </div>
   </body>
